--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -240,6 +240,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute error for each model\n",
+    "def errors_model(model):\n",
+    "    errors_list = []\n",
+    "    for store in store_list:\n",
+    "        for family in family_list:\n",
+    "            # split ourtrain and ourtest\n",
+    "            ourtrain, ourtest = split_train_test(date_features(store_family_subsets(store)[family]))\n",
+    "            \n",
+    "            # apply trend model\n",
+    "            y_test = ourtest['sales']\n",
+    "            y_fore = model(ourtrain, ourtest)\n",
+    "            \n",
+    "            # compute errors\n",
+    "            errors = error(y_fore, y_test)\n",
+    "            errors_list.append(round(errors, 2))\n",
+    "\n",
+    "    return sum(errors_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1411,10 +1436,10 @@
     "        \n",
     "        # apply trend model\n",
     "        y_test = ourtest['sales']\n",
-    "        y_fore = trend(ourtrain, ourtest)\n",
+    "        y_trend_fore = trend(ourtrain, ourtest)\n",
     "        \n",
     "        # compute errors\n",
-    "        errors = error(y_fore, y_test)\n",
+    "        errors = error(y_trend_fore, y_test)\n",
     "        trend_errors.append(round(errors, 2))\n",
     "\n",
     "sum(trend_errors)"
@@ -1429,26 +1454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_subsets[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def seasonal(ourtrain, ourtest, error):\n",
+    "def seasonal(ourtrain, ourtest):    # return y_fore\n",
     "\n",
-    "    y_test = ourtest['sales']\n",
-    "\n",
+    "    test_id = ourtest['id']\n",
+    "    \n",
     "    # 12 sin/cos pairs for \"A\"nnual seasonality\n",
     "    fourier = CalendarFourier(freq=\"A\", order=12)\n",
-    "    \n",
     "    season_dp = DeterministicProcess(\n",
     "        index=ourtrain.index,\n",
     "        constant=True,               # dummy feature for bias (y-intercept)\n",
@@ -1464,25 +1479,164 @@
     "    season_model = LinearRegression(fit_intercept=False)\n",
     "    _ = season_model.fit(X, y)\n",
     "\n",
-    "    # # sales values computed from season_model\n",
-    "    # y_season_pred = pd.Series(season_model.predict(X), index=y.index) \n",
-    "\n",
     "    # Forecasting for 2017-01-01 ~ 2017-08-15\n",
-    "    X_fore = season_dp.out_of_sample(steps=len(y_test))\n",
+    "    X_fore = season_dp.out_of_sample(steps=len(ourtest.index))\n",
     "    y_fore = pd.Series(season_model.predict(X_fore), index=X_fore.index)\n",
+    "    y_fore = pd.concat([y_fore, test_id], axis=1)\n",
+    "    y_fore = y_fore.rename(columns={0: 'sales'})\n",
     "\n",
-    "    return error(y_fore, y_test)"
+    "    return y_fore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>3.155316</td>\n",
+       "      <td>2596376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>2.844285</td>\n",
+       "      <td>2598158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-03</th>\n",
+       "      <td>2.869616</td>\n",
+       "      <td>2599940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-04</th>\n",
+       "      <td>2.789500</td>\n",
+       "      <td>2601722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-05</th>\n",
+       "      <td>2.950803</td>\n",
+       "      <td>2603504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-11</th>\n",
+       "      <td>3.165873</td>\n",
+       "      <td>2991980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-12</th>\n",
+       "      <td>2.940561</td>\n",
+       "      <td>2993762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-13</th>\n",
+       "      <td>3.015122</td>\n",
+       "      <td>2995544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-14</th>\n",
+       "      <td>2.731969</td>\n",
+       "      <td>2997326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-15</th>\n",
+       "      <td>2.803199</td>\n",
+       "      <td>2999108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>227 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sales       id\n",
+       "2017-01-01  3.155316  2596376\n",
+       "2017-01-02  2.844285  2598158\n",
+       "2017-01-03  2.869616  2599940\n",
+       "2017-01-04  2.789500  2601722\n",
+       "2017-01-05  2.950803  2603504\n",
+       "...              ...      ...\n",
+       "2017-08-11  3.165873  2991980\n",
+       "2017-08-12  2.940561  2993762\n",
+       "2017-08-13  3.015122  2995544\n",
+       "2017-08-14  2.731969  2997326\n",
+       "2017-08-15  2.803199  2999108\n",
+       "\n",
+       "[227 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# pd.to_datetime(date_col_to_force, errors = 'coerce')\n",
-    "seasonal_error = seasonal(ourtrain, ourtest, error)\n",
-    "print(\"Total Error from Seasonl model: \", round(seasonal_error, 4))"
+    "seasonal(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1184.7700000000004"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seasonal_errors = []\n",
+    "for store in store_list:\n",
+    "    for family in family_list:\n",
+    "        # split ourtrain and ourtest\n",
+    "        ourtrain, ourtest = split_train_test(date_features(store_family_subsets(store)[family]))\n",
+    "        \n",
+    "        # apply trend model\n",
+    "        y_test = ourtest['sales']\n",
+    "        y_seasonal_fore = seasonal(ourtrain, ourtest)\n",
+    "        \n",
+    "        # compute errors\n",
+    "        errors = error(y_seasonal_fore, y_test)\n",
+    "        seasonal_errors.append(round(errors, 2))\n",
+    "\n",
+    "sum(seasonal_errors)"
    ]
   },
   {
@@ -1594,20 +1748,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cycle(subset, error):\n",
+    "def cycle(ourtrain):\n",
+    "\n",
+    "    test_id = ourtest['id']\n",
     "    \n",
-    "    X = make_lags(subset.sales, lags=7)\n",
+    "    X = make_lags(ourtrain.sales, lags=7)\n",
     "    X = X.fillna(0.0)\n",
-    "    y = subset.sales\n",
+    "    y = ourtrain.sales\n",
     "\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=int(len(X.index)*0.3), shuffle=False)\n",
     "\n",
     "    ts_model = LinearRegression()  # `fit_intercept=True` since we didn't use DeterministicProcess\n",
     "    ts_model.fit(X_train, y_train)\n",
     "    y_fore = pd.Series(ts_model.predict(X_test), index=X_test.index)\n",
-    "    y_fore[y_fore < 0] = 0\n",
+    "    y_fore = pd.concat([y_fore, test_id], axis=1)\n",
+    "    y_fore = y_fore.rename(columns={0: 'sales'})\n",
     "\n",
-    "    return error(y_fore, y_test)"
+    "    return y_fore"
    ]
   },
   {
@@ -1618,7 +1775,7 @@
    "source": [
     "# pd.to_datetime(date_col_to_force, errors = 'coerce')\n",
     "cycle_error = cycle(ourtrain, ourtest, error)\n",
-    "print(\"Total Error from Cycle model: \", round(seasonal_error, 4))"
+    "print(\"Total Error from Cycle model: \", round(cycle_error, 4))"
    ]
   },
   {
