--- a/StoreSales/StoreSales_Competition.ipynb
+++ b/StoreSales/StoreSales_Competition.ipynb
@@ -15,12 +15,12 @@
     "## Blue print\n",
     "\n",
     "1. Investigate the dataset. (unique values, data type etc)\n",
-    "2. How to numerize *family* features?\n",
-    "3. How to convert *date* to time features?\n",
+    "2. Create subsets grouped by 'store' and 'family'.\n",
+    "3. Convert *date* to time features.\n",
     "4. Split *train* dataset to *ourtrain* and *ourtest* for pre-validation.\n",
     "5. Apply various ML models. (Trend, Periodtogram, Cycles, Hybrid)\n",
     "6. Choose the best model and apply to our test set.\n",
-    "7. Apply and make csv file for submition.\n"
+    "7. Create csv file for submission.\n"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Generate subsets"
+    "## 2. Create subsets"
    ]
   },
   {
