--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -532,55 +532,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id        0\n",
-       "f_00      0\n",
-       "f_01      0\n",
-       "f_02      0\n",
-       "f_03      0\n",
-       "f_04      0\n",
-       "f_05      0\n",
-       "f_06      0\n",
-       "f_07      0\n",
-       "f_08      0\n",
-       "f_09      0\n",
-       "f_10      0\n",
-       "f_11      0\n",
-       "f_12      0\n",
-       "f_13      0\n",
-       "f_14      0\n",
-       "f_15      0\n",
-       "f_16      0\n",
-       "f_17      0\n",
-       "f_18      0\n",
-       "f_19      0\n",
-       "f_20      0\n",
-       "f_21      0\n",
-       "f_22      0\n",
-       "f_23      0\n",
-       "f_24      0\n",
-       "f_25      0\n",
-       "f_26      0\n",
-       "f_28      0\n",
-       "f_29      0\n",
-       "f_30      0\n",
-       "target    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cor = round(train.corr(), 2)\n",
-    "cor[((cor > 0.4) | (cor < -0.4)) & (cor != 1)].count()  # no correlation was found"
+    "# cor[((cor > 0.4) | (cor < -0.4)) & (cor != 1)].count()  # no correlation was found"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *"
    ]
   },
   {
