--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -10,7 +10,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Check data shape and type.\n",
+    "2. Convert chracteristic values to numbers.\n",
+    "3. Split training dataset to *ourtrain* and *ourtest*.\n",
+    "4. Dimensionality reduction.\n",
+    "5. Try various models(logistic regression, decision tree, random forest, SVM, KNN, Naive Bayes).\n",
+    "6. Apply to the test dataset.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +39,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import datetime\n",
-    "import math\n",
     "from statsmodels.tsa.deterministic import CalendarFourier, DeterministicProcess\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder"
@@ -41,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +262,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,15 +549,257 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *"
+    "## 2. Numerize *f_27* column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Return 'n'th character\n",
+    "def nth_char(column, n):\n",
+    "    count = 1\n",
+    "    nth = []\n",
+    "    for characters in column:\n",
+    "        for char in characters:\n",
+    "            if count == n:\n",
+    "                nth.append(char)\n",
+    "                count = 1\n",
+    "                break\n",
+    "            else:\n",
+    "                count += 1\n",
+    "\n",
+    "    return nth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the letters and store in the new columns\n",
+    "f_27_01 = np.array(nth_char(train.f_27, 1))\n",
+    "f_27_02 = np.array(nth_char(train.f_27, 2))\n",
+    "f_27_03 = np.array(nth_char(train.f_27, 3))\n",
+    "f_27_04 = np.array(nth_char(train.f_27, 4))\n",
+    "f_27_05 = np.array(nth_char(train.f_27, 5))\n",
+    "f_27_06 = np.array(nth_char(train.f_27, 6))\n",
+    "f_27_07 = np.array(nth_char(train.f_27, 7))\n",
+    "f_27_08 = np.array(nth_char(train.f_27, 8))\n",
+    "f_27_09 = np.array(nth_char(train.f_27, 9))\n",
+    "f_27_10 = np.array(nth_char(train.f_27, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create DataFrame\n",
+    "dff_27 = pd.DataFrame({\"f_27_01\":f_27_01, \"f_27_02\":f_27_02, \"f_27_03\":f_27_03, \"f_27_04\":f_27_04, \n",
+    "                \"f_27_05\":f_27_05, \"f_27_06\":f_27_06, \"f_27_07\":f_27_07, \"f_27_08\":f_27_08, \n",
+    "                \"f_27_09\":f_27_09, \"f_27_10\":f_27_10})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(900000, 10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_27_01</th>\n",
+       "      <th>f_27_02</th>\n",
+       "      <th>f_27_03</th>\n",
+       "      <th>f_27_04</th>\n",
+       "      <th>f_27_05</th>\n",
+       "      <th>f_27_06</th>\n",
+       "      <th>f_27_07</th>\n",
+       "      <th>f_27_08</th>\n",
+       "      <th>f_27_09</th>\n",
+       "      <th>f_27_10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "      <td>A</td>\n",
+       "      <td>D</td>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>E</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>E</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "      <td>C</td>\n",
+       "      <td>K</td>\n",
+       "      <td>A</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "      <td>B</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "      <td>C</td>\n",
+       "      <td>H</td>\n",
+       "      <td>F</td>\n",
+       "      <td>E</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  f_27_01 f_27_02 f_27_03 f_27_04 f_27_05 f_27_06 f_27_07 f_27_08 f_27_09  \\\n",
+       "0       A       B       A       B       D       A       D       B       A   \n",
+       "1       A       C       A       C       C       A       D       C       E   \n",
+       "2       A       A       A       E       A       B       C       K       A   \n",
+       "3       B       D       B       B       A       A       C       B       C   \n",
+       "4       B       D       B       C       B       B       C       H       F   \n",
+       "\n",
+       "  f_27_10  \n",
+       "0       B  \n",
+       "1       B  \n",
+       "2       D  \n",
+       "3       B  \n",
+       "4       E  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(dff_27.shape)\n",
+    "dff_27.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_27_01:  ['A' 'B']\n",
+      "f_27_02:  ['B' 'C' 'A' 'D' 'E' 'G' 'F' 'H' 'I' 'J' 'K' 'L' 'M' 'N']\n",
+      "f_27_03:  ['A' 'B']\n",
+      "f_27_04:  ['B' 'C' 'E' 'D' 'H' 'I' 'G' 'A' 'F' 'J' 'K' 'L' 'M' 'N' 'O']\n",
+      "f_27_05:  ['D' 'C' 'A' 'B' 'F' 'E' 'G' 'I' 'H' 'J' 'K' 'L' 'M' 'O']\n",
+      "f_27_06:  ['A' 'B']\n",
+      "f_27_07:  ['D' 'C' 'A' 'E' 'B' 'G' 'H' 'F' 'I' 'J' 'M' 'K' 'L' 'N' 'O']\n",
+      "f_27_08:  ['B' 'C' 'K' 'H' 'E' 'P' 'D' 'A' 'S' 'T' 'J' 'Q' 'N' 'R' 'G' 'M' 'F' 'O'\n",
+      " 'I' 'L']\n",
+      "f_27_09:  ['A' 'E' 'C' 'F' 'D' 'H' 'B' 'G' 'I' 'J' 'L' 'K' 'M' 'N' 'O']\n",
+      "f_27_10:  ['B' 'D' 'E' 'A' 'C' 'K' 'F' 'G' 'H' 'J' 'I' 'L' 'M' 'N' 'O']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Investigate\n",
+    "print(\"f_27_01: \", dff_27.f_27_01.unique())\n",
+    "print(\"f_27_02: \", dff_27.f_27_02.unique())\n",
+    "print(\"f_27_03: \", dff_27.f_27_03.unique())\n",
+    "print(\"f_27_04: \", dff_27.f_27_04.unique())\n",
+    "print(\"f_27_05: \", dff_27.f_27_05.unique())\n",
+    "print(\"f_27_06: \", dff_27.f_27_06.unique())\n",
+    "print(\"f_27_07: \", dff_27.f_27_07.unique())\n",
+    "print(\"f_27_08: \", dff_27.f_27_08.unique())\n",
+    "print(\"f_27_09: \", dff_27.f_27_09.unique())\n",
+    "print(\"f_27_10: \", dff_27.f_27_10.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Numerize the split dataframe\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "one hot encoding : A -> 1 etc<br>\n",
-    "pca "
+    "3. Split training dataset to *ourtrain* and *ourtest*.\n",
+    "4. Dimensionality reduction. (pca?)\n",
+    "5. Try various models(logistic regression, decision tree, random forest, SVM, KNN, Naive Bayes).\n",
+    "6. Apply to the test dataset."
    ]
   },
   {
