--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "4       E  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "4        6        5  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "[1 rows x 41 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
        "4 -449995.500416"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    462161\n",
+       "1    437839\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if a Stratified Sampling should be used\n",
+    "train[\"target\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1983,124 +2006,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>642164</th>\n",
-       "      <td>642164</td>\n",
-       "      <td>-0.615797</td>\n",
-       "      <td>1.628709</td>\n",
-       "      <td>-0.098139</td>\n",
-       "      <td>1.947778</td>\n",
-       "      <td>0.078643</td>\n",
-       "      <td>-1.771631</td>\n",
-       "      <td>-0.492407</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <th>94774</th>\n",
+       "      <td>94774</td>\n",
+       "      <td>-0.142955</td>\n",
+       "      <td>0.998779</td>\n",
+       "      <td>0.338305</td>\n",
+       "      <td>1.091507</td>\n",
+       "      <td>-1.636606</td>\n",
+       "      <td>-1.957741</td>\n",
+       "      <td>0.107597</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>201331</th>\n",
-       "      <td>201331</td>\n",
-       "      <td>0.435278</td>\n",
-       "      <td>-1.648332</td>\n",
-       "      <td>-0.866725</td>\n",
-       "      <td>-0.061529</td>\n",
-       "      <td>1.793151</td>\n",
-       "      <td>0.467092</td>\n",
-       "      <td>0.679758</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
+       "      <th>57476</th>\n",
+       "      <td>57476</td>\n",
+       "      <td>0.513663</td>\n",
+       "      <td>-0.233822</td>\n",
+       "      <td>0.418408</td>\n",
+       "      <td>-0.304559</td>\n",
+       "      <td>-0.453802</td>\n",
+       "      <td>1.450914</td>\n",
+       "      <td>1.113922</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437832</th>\n",
+       "      <td>437832</td>\n",
+       "      <td>-0.970042</td>\n",
+       "      <td>-1.680995</td>\n",
+       "      <td>0.421482</td>\n",
+       "      <td>0.480354</td>\n",
+       "      <td>-0.190683</td>\n",
+       "      <td>0.635815</td>\n",
+       "      <td>-0.112825</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>13</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364456</th>\n",
-       "      <td>364456</td>\n",
-       "      <td>0.105152</td>\n",
-       "      <td>0.632326</td>\n",
-       "      <td>0.315449</td>\n",
-       "      <td>1.599021</td>\n",
-       "      <td>0.552552</td>\n",
-       "      <td>1.744684</td>\n",
-       "      <td>0.844570</td>\n",
-       "      <td>0</td>\n",
+       "      <th>609728</th>\n",
+       "      <td>609728</td>\n",
+       "      <td>-0.558220</td>\n",
+       "      <td>-0.883866</td>\n",
+       "      <td>1.999973</td>\n",
+       "      <td>-1.359405</td>\n",
+       "      <td>-0.948404</td>\n",
+       "      <td>0.431423</td>\n",
+       "      <td>-1.216660</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72659</th>\n",
-       "      <td>72659</td>\n",
-       "      <td>-2.184021</td>\n",
-       "      <td>-1.300333</td>\n",
-       "      <td>-0.729338</td>\n",
-       "      <td>-0.274526</td>\n",
-       "      <td>-0.284955</td>\n",
-       "      <td>1.068747</td>\n",
-       "      <td>-0.176543</td>\n",
+       "      <th>634047</th>\n",
+       "      <td>634047</td>\n",
+       "      <td>-1.230923</td>\n",
+       "      <td>-0.701474</td>\n",
+       "      <td>-0.115596</td>\n",
+       "      <td>-1.270750</td>\n",
+       "      <td>-0.583876</td>\n",
+       "      <td>-1.743249</td>\n",
+       "      <td>0.651963</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350678</th>\n",
-       "      <td>350678</td>\n",
-       "      <td>0.555409</td>\n",
-       "      <td>-2.475356</td>\n",
-       "      <td>-1.744136</td>\n",
-       "      <td>-0.491676</td>\n",
-       "      <td>-0.038175</td>\n",
-       "      <td>0.040787</td>\n",
-       "      <td>1.259726</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2109,30 +2132,30 @@
       ],
       "text/plain": [
        "            id      f_00      f_01      f_02      f_03      f_04      f_05  \\\n",
-       "642164  642164 -0.615797  1.628709 -0.098139  1.947778  0.078643 -1.771631   \n",
-       "201331  201331  0.435278 -1.648332 -0.866725 -0.061529  1.793151  0.467092   \n",
-       "364456  364456  0.105152  0.632326  0.315449  1.599021  0.552552  1.744684   \n",
-       "72659    72659 -2.184021 -1.300333 -0.729338 -0.274526 -0.284955  1.068747   \n",
-       "350678  350678  0.555409 -2.475356 -1.744136 -0.491676 -0.038175  0.040787   \n",
+       "94774    94774 -0.142955  0.998779  0.338305  1.091507 -1.636606 -1.957741   \n",
+       "57476    57476  0.513663 -0.233822  0.418408 -0.304559 -0.453802  1.450914   \n",
+       "437832  437832 -0.970042 -1.680995  0.421482  0.480354 -0.190683  0.635815   \n",
+       "609728  609728 -0.558220 -0.883866  1.999973 -1.359405 -0.948404  0.431423   \n",
+       "634047  634047 -1.230923 -0.701474 -0.115596 -1.270750 -0.583876 -1.743249   \n",
        "\n",
        "            f_06  f_07  f_08  ...  f_27_01  f_27_02  f_27_03  f_27_04  \\\n",
-       "642164 -0.492407     0     1  ...        1        3        1        5   \n",
-       "201331  0.679758     2     5  ...        2        3        2        2   \n",
-       "364456  0.844570     0     1  ...        1        2        2        2   \n",
-       "72659  -0.176543     1     3  ...        2        3        1        2   \n",
-       "350678  1.259726     2     3  ...        2        7        2        2   \n",
+       "94774   0.107597     2     3  ...        2        3        1        2   \n",
+       "57476   1.113922     0     4  ...        1        4        2        2   \n",
+       "437832 -0.112825     1     2  ...        2        2        2        2   \n",
+       "609728 -1.216660     1     2  ...        1        1        2        3   \n",
+       "634047  0.651963     2     1  ...        2        4        1        4   \n",
        "\n",
        "        f_27_05  f_27_06  f_27_07  f_27_08  f_27_09  f_27_10  \n",
-       "642164        2        1        7        6        5        4  \n",
-       "201331        3        1        2       13        4        6  \n",
-       "364456        1        2        5        3        1        6  \n",
-       "72659         3        2        4       12        3        3  \n",
-       "350678        2        1        5        7        2        3  \n",
+       "94774         4        1        4        7        2        2  \n",
+       "57476         2        2        3        7        5        1  \n",
+       "437832        2        2        4       13        2        6  \n",
+       "609728        2        1        4       15        2        3  \n",
+       "634047        2        2        5        6        1        2  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
