--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -2458,353 +2458,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(900000, 41) (900000,)\n",
-      "(630000, 41) (630000,)\n"
+      "(900000, 41) (900000,)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>f_00</th>\n",
-       "      <th>f_01</th>\n",
-       "      <th>f_02</th>\n",
-       "      <th>f_03</th>\n",
-       "      <th>f_04</th>\n",
-       "      <th>f_05</th>\n",
-       "      <th>f_06</th>\n",
-       "      <th>f_07</th>\n",
-       "      <th>f_08</th>\n",
-       "      <th>f_09</th>\n",
-       "      <th>f_10</th>\n",
-       "      <th>f_11</th>\n",
-       "      <th>f_12</th>\n",
-       "      <th>f_13</th>\n",
-       "      <th>f_14</th>\n",
-       "      <th>f_15</th>\n",
-       "      <th>f_16</th>\n",
-       "      <th>f_17</th>\n",
-       "      <th>f_18</th>\n",
-       "      <th>f_19</th>\n",
-       "      <th>f_20</th>\n",
-       "      <th>f_21</th>\n",
-       "      <th>f_22</th>\n",
-       "      <th>f_23</th>\n",
-       "      <th>f_24</th>\n",
-       "      <th>f_25</th>\n",
-       "      <th>f_26</th>\n",
-       "      <th>f_28</th>\n",
-       "      <th>f_29</th>\n",
-       "      <th>f_30</th>\n",
-       "      <th>f_27_01</th>\n",
-       "      <th>f_27_02</th>\n",
-       "      <th>f_27_03</th>\n",
-       "      <th>f_27_04</th>\n",
-       "      <th>f_27_05</th>\n",
-       "      <th>f_27_06</th>\n",
-       "      <th>f_27_07</th>\n",
-       "      <th>f_27_08</th>\n",
-       "      <th>f_27_09</th>\n",
-       "      <th>f_27_10</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>495765</th>\n",
-       "      <td>495765</td>\n",
-       "      <td>-0.604396</td>\n",
-       "      <td>-1.241022</td>\n",
-       "      <td>1.214139</td>\n",
-       "      <td>-1.126424</td>\n",
-       "      <td>-0.719717</td>\n",
-       "      <td>0.523912</td>\n",
-       "      <td>0.772980</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-4.007584</td>\n",
-       "      <td>0.079873</td>\n",
-       "      <td>7.103822</td>\n",
-       "      <td>-3.710500</td>\n",
-       "      <td>7.770049</td>\n",
-       "      <td>2.298219</td>\n",
-       "      <td>-4.108233</td>\n",
-       "      <td>0.558195</td>\n",
-       "      <td>-203.587007</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86875</th>\n",
-       "      <td>86875</td>\n",
-       "      <td>0.050263</td>\n",
-       "      <td>0.735141</td>\n",
-       "      <td>-0.026930</td>\n",
-       "      <td>-1.317030</td>\n",
-       "      <td>0.978249</td>\n",
-       "      <td>-1.663758</td>\n",
-       "      <td>-0.481695</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.188316</td>\n",
-       "      <td>-0.276230</td>\n",
-       "      <td>-0.794033</td>\n",
-       "      <td>-3.096853</td>\n",
-       "      <td>0.374103</td>\n",
-       "      <td>-3.452399</td>\n",
-       "      <td>-2.089530</td>\n",
-       "      <td>1.437596</td>\n",
-       "      <td>-81.519853</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48956</th>\n",
-       "      <td>48956</td>\n",
-       "      <td>-0.147157</td>\n",
-       "      <td>0.992112</td>\n",
-       "      <td>-0.497621</td>\n",
-       "      <td>0.753462</td>\n",
-       "      <td>-0.564150</td>\n",
-       "      <td>0.274811</td>\n",
-       "      <td>-0.053711</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.316800</td>\n",
-       "      <td>1.068751</td>\n",
-       "      <td>-2.239056</td>\n",
-       "      <td>0.792618</td>\n",
-       "      <td>-0.202696</td>\n",
-       "      <td>-4.851477</td>\n",
-       "      <td>4.485365</td>\n",
-       "      <td>-0.568917</td>\n",
-       "      <td>227.149752</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877253</th>\n",
-       "      <td>877253</td>\n",
-       "      <td>-0.287867</td>\n",
-       "      <td>1.169915</td>\n",
-       "      <td>-0.001177</td>\n",
-       "      <td>1.406511</td>\n",
-       "      <td>-1.329836</td>\n",
-       "      <td>-0.239872</td>\n",
-       "      <td>0.134412</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.000583</td>\n",
-       "      <td>-1.952841</td>\n",
-       "      <td>-0.656887</td>\n",
-       "      <td>0.750793</td>\n",
-       "      <td>-3.718661</td>\n",
-       "      <td>-0.959326</td>\n",
-       "      <td>4.904802</td>\n",
-       "      <td>3.830466</td>\n",
-       "      <td>302.051950</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17699</th>\n",
-       "      <td>17699</td>\n",
-       "      <td>0.038937</td>\n",
-       "      <td>-0.392223</td>\n",
-       "      <td>0.861162</td>\n",
-       "      <td>2.692872</td>\n",
-       "      <td>0.068014</td>\n",
-       "      <td>0.228641</td>\n",
-       "      <td>1.378591</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.876933</td>\n",
-       "      <td>-6.228982</td>\n",
-       "      <td>0.813420</td>\n",
-       "      <td>-1.394910</td>\n",
-       "      <td>2.828710</td>\n",
-       "      <td>-1.747010</td>\n",
-       "      <td>2.030346</td>\n",
-       "      <td>-0.131081</td>\n",
-       "      <td>597.163367</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id      f_00      f_01      f_02      f_03      f_04      f_05  \\\n",
-       "495765  495765 -0.604396 -1.241022  1.214139 -1.126424 -0.719717  0.523912   \n",
-       "86875    86875  0.050263  0.735141 -0.026930 -1.317030  0.978249 -1.663758   \n",
-       "48956    48956 -0.147157  0.992112 -0.497621  0.753462 -0.564150  0.274811   \n",
-       "877253  877253 -0.287867  1.169915 -0.001177  1.406511 -1.329836 -0.239872   \n",
-       "17699    17699  0.038937 -0.392223  0.861162  2.692872  0.068014  0.228641   \n",
-       "\n",
-       "            f_06  f_07  f_08  f_09  f_10  f_11  f_12  f_13  f_14  f_15  f_16  \\\n",
-       "495765  0.772980     7     0     4     1     3     5     2     3     3     0   \n",
-       "86875  -0.481695     1     3     4     3     0     3     3     1     2     2   \n",
-       "48956  -0.053711     0     1     2     1     3     4     3     6     1     1   \n",
-       "877253  0.134412     0     0     1     5     1     3     0     1     4     2   \n",
-       "17699   1.378591     1     0     3     6     1     2     1     1     1     2   \n",
-       "\n",
-       "        f_17  f_18      f_19      f_20      f_21      f_22      f_23  \\\n",
-       "495765     0     7 -4.007584  0.079873  7.103822 -3.710500  7.770049   \n",
-       "86875      0     5  0.188316 -0.276230 -0.794033 -3.096853  0.374103   \n",
-       "48956      2     1 -1.316800  1.068751 -2.239056  0.792618 -0.202696   \n",
-       "877253     1     0 -1.000583 -1.952841 -0.656887  0.750793 -3.718661   \n",
-       "17699      1     2  1.876933 -6.228982  0.813420 -1.394910  2.828710   \n",
-       "\n",
-       "            f_24      f_25      f_26        f_28  f_29  f_30  f_27_01  \\\n",
-       "495765  2.298219 -4.108233  0.558195 -203.587007     0     1        1   \n",
-       "86875  -3.452399 -2.089530  1.437596  -81.519853     1     0        2   \n",
-       "48956  -4.851477  4.485365 -0.568917  227.149752     0     2        1   \n",
-       "877253 -0.959326  4.904802  3.830466  302.051950     0     0        1   \n",
-       "17699  -1.747010  2.030346 -0.131081  597.163367     1     0        1   \n",
-       "\n",
-       "        f_27_02  f_27_03  f_27_04  f_27_05  f_27_06  f_27_07  f_27_08  \\\n",
-       "495765        3        2        2        2        1        1        7   \n",
-       "86875         4        2        2        3        1        4        7   \n",
-       "48956         6        2        3        1        1        4       18   \n",
-       "877253        1        1        7        3        2        2       12   \n",
-       "17699         3        2        4        2        2        2        3   \n",
-       "\n",
-       "        f_27_09  f_27_10  \n",
-       "495765        4        6  \n",
-       "86875         2        1  \n",
-       "48956         1        6  \n",
-       "877253        6        2  \n",
-       "17699         4        1  "
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2813,10 +2475,10 @@
     "y = train[\"target\"]\n",
     "print(X.shape, y.shape)\n",
     "\n",
-    "# Split each of features(X) and target(y) into train and target\n",
-    "Xtr, Xte, ytr, yte = train_test_split(X, y, test_size=0.3, stratify=y)\n",
-    "print(Xtr.shape, ytr.shape)\n",
-    "Xtr.head()"
+    "# # Split each of features(X) and target(y) into train and target\n",
+    "# Xtr, Xte, ytr, yte = train_test_split(X, y, test_size=0.3, stratify=y)\n",
+    "# print(Xtr.shape, ytr.shape)\n",
+    "# Xtr.head()"
    ]
   },
   {
@@ -2835,26 +2497,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(900000, 1)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.00000000e+00  0.00000000e+00 -1.37324640e+00 ...  2.00000000e+00\n",
+      "   1.00000000e+00  2.00000000e+00]\n",
+      " [ 1.00000000e+00  1.00000000e+00  1.69702058e+00 ...  3.00000000e+00\n",
+      "   5.00000000e+00  2.00000000e+00]\n",
+      " [ 1.00000000e+00  2.00000000e+00  1.68172561e+00 ...  1.10000000e+01\n",
+      "   1.00000000e+00  4.00000000e+00]\n",
+      " ...\n",
+      " [ 1.00000000e+00  8.99997000e+05  1.38620112e+00 ...  8.00000000e+00\n",
+      "   2.00000000e+00  1.00000000e+00]\n",
+      " [ 1.00000000e+00  8.99998000e+05 -1.59057167e+00 ...  4.00000000e+00\n",
+      "   1.00000000e+00  5.00000000e+00]\n",
+      " [ 1.00000000e+00  8.99999000e+05 -6.36209999e-01 ...  1.90000000e+01\n",
+      "   3.00000000e+00  5.00000000e+00]]\n"
+     ]
     }
    ],
    "source": [
-    "data_pca_df.shape\n",
-    "\n",
-    "X = data_pca_df.shape\n",
-    "\n",
-    "Xtr, Xte, ytr,  = train_test_split(data_pca_df.shape, test_size=0.3, stratify=train[\"target\"])"
+    "# Add 1's to reflect intercepts\n",
+    "X_lo = np.hstack([np.ones((X.shape[0],1)), X])\n",
+    "print(X_lo)"
    ]
   },
   {
@@ -2862,16 +2531,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.scatter(dataset[0:5,0],dataset[0:5,1],label='0')\n",
-    "ax.scatter(dataset[5:10,0],dataset[5:10,1],label='1')\n",
-    "leg = ax.legend();\n",
-    "\n",
-    "X = hstack([ones((dataset.shape[0],1)), dataset[:,0:2] ])\n",
-    "y = dataset[:,2]\n",
-    "print(X)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
